# kitty

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/fun/: cat.rs  cookie.rs
src/commands/utils/: help.rs
